WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305234
[Site Isolation] testRunner.globalFlag doesn't work with Site Isolation
https://bugs.webkit.org/show_bug.cgi?id=305234
Summary
[Site Isolation] testRunner.globalFlag doesn't work with Site Isolation
Anthony Tarbinian
Reported
2026-01-09 16:13:08 PST
Several tests in LayoutTests/http/tests/security rely on testRunner.globalFlag to communicate between different frames. Previously, with site isolation enabled, this flag would not be shared across different processes. This caused several LayoutTests to timeout since they use testRunner.globalFlag to indicate when an event has ocurred. Since testRunner.globalFlag wasn't updating across processes they were stuck waiting forever.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-09 16:13:14 PST
<
rdar://problem/167876464
>
Anthony Tarbinian
Comment 2
2026-01-09 18:25:12 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56378
EWS
Comment 3
2026-01-13 23:53:45 PST
Committed
305562@main
(ed8a83f38d72): <
https://commits.webkit.org/305562@main
> Reviewed commits have been landed. Closing PR #56378 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug