[Site Isolation] Fix testRunner.globalFlag by moving it from the injected bundle https://bugs.webkit.org/show_bug.cgi?id=305234 rdar://167876464

Reviewed by Sihui Liu and Alex Christensen.

Several tests in LayoutTests/http/tests/security rely on testRunner.globalFlag
to communicate between different frames. Previously, with site isolation enabled,
this flag would not be shared across different processes. This caused several LayoutTests
to timeout since they use testRunner.globalFlag to indicate when an event has ocurred.
Since testRunner.globalFlag wasn't updating across processes they were stuck waiting forever.

This patch moves the state for testRunner.globalFlag out of the injected bundle.

Followed the same strategy as done for m_shouldDumpAllFrameScrollPositions in
https://commits.webkit.org/291512@main

As a result, fixing this test runner flag fixes the following tests with site isolation enabled
- LayoutTests/http/tests/security/aboutBlank/xss-DENIED-navigate-opener-document-write.html
- LayoutTests/http/tests/security/aboutBlank/xss-DENIED-navigate-opener-javascript-url.html
- LayoutTests/http/tests/security/cross-frame-access-enumeration.html
- LayoutTests/http/tests/security/cross-frame-access-get-custom-property-cached.html
- LayoutTests/http/tests/security/cross-frame-access-get.html
- LayoutTests/http/tests/security/cross-frame-access-getOwnPropertyDescriptor.html
- LayoutTests/http/tests/security/cross-frame-access-history-get-override.html
- LayoutTests/http/tests/security/cross-frame-access-history-get.html
- LayoutTests/http/tests/security/cross-frame-access-location-get-override.html
- LayoutTests/http/tests/security/cross-frame-access-location-get.html
- LayoutTests/http/tests/security/cross-frame-access-private-browsing.html
- LayoutTests/http/tests/security/dataURL/xss-DENIED-from-javascript-url-window-open.html
- LayoutTests/http/tests/security/dataURL/xss-DENIED-to-data-url-in-foreign-domain-subframe-location-change.html
- LayoutTests/http/tests/security/dataURL/xss-DENIED-to-data-url-window-open.html
- LayoutTests/http/tests/security/frameNavigation/xss-ALLOWED-targeted-subframe-navigation-change.html
- LayoutTests/http/tests/security/javascriptURL/javascriptURL-execution-context-frame-src-setAttribute.html
- LayoutTests/http/tests/security/javascriptURL/javascriptURL-execution-context-frame-src-setAttributeNS.html
- LayoutTests/http/tests/security/javascriptURL/javascriptURL-execution-context-frame-src-setAttributeNode.html
- LayoutTests/http/tests/security/javascriptURL/javascriptURL-execution-context-frame-src-setAttributeNodeNS.html
- LayoutTests/http/tests/security/javascriptURL/javascriptURL-execution-context-iframe-src-getAttribute-value.html
- LayoutTests/http/tests/security/javascriptURL/javascriptURL-execution-context-iframe-src-setAttribute.html
- LayoutTests/http/tests/security/javascriptURL/javascriptURL-execution-context-iframe-src-setAttributeNode.html
- LayoutTests/http/tests/security/javascriptURL/javascriptURL-execution-context-iframe-src-setAttributeNodeNS.html
- LayoutTests/http/tests/security/javascriptURL/xss-ALLOWED-to-javascript-url-sub-frame-2-level.html
- LayoutTests/http/tests/security/javascriptURL/xss-ALLOWED-to-javascript-url-window-open.html
- LayoutTests/http/tests/security/javascriptURL/xss-DENIED-from-javascript-url-in-foreign-domain-window-open.html
- LayoutTests/http/tests/security/javascriptURL/xss-DENIED-to-javascript-url-in-foreign-domain-subframe.html
- LayoutTests/http/tests/security/javascriptURL/xss-DENIED-to-javascript-url-in-foreign-domain-window-open.html

* LayoutTests/platform/mac-site-isolation/TestExpectations:
* LayoutTests/platform/wk2/TestExpectations:
* Tools/WebKitTestRunner/InjectedBundle/TestRunner.cpp:
(WTR::TestRunner::globalFlag const):
(WTR::TestRunner::setGlobalFlag):
* Tools/WebKitTestRunner/InjectedBundle/TestRunner.h:
(WTR::TestRunner::globalFlag const): Deleted.
(WTR::TestRunner::setGlobalFlag): Deleted.
* Tools/WebKitTestRunner/TestInvocation.cpp:
(WTR::TestInvocation::didReceiveSynchronousMessageFromInjectedBundle):
* Tools/WebKitTestRunner/TestInvocation.h:

Canonical link: https://commits.webkit.org/305562@main