Tools/WebKitTestRunner/TestInvocation.cpp
@@ -591,6 +591,13 @@ WKRetainPtr<WKTypeRef> TestInvocation::didReceiveSynchronousMessageFromInjectedB
     if (WKStringIsEqualToUTF8CString(messageName, "GetDumpFrameLoadCallbacks"))
         return adoptWK(WKBooleanCreate(m_dumpFrameLoadCallbacks));
 
+    if (WKStringIsEqualToUTF8CString(messageName, "SetGlobalFlag")) {
+        m_globalFlag = booleanValue(messageBody);
+        return nullptr;
+    }
+    if (WKStringIsEqualToUTF8CString(messageName, "GetGlobalFlag"))
+        return adoptWK(WKBooleanCreate(m_globalFlag));
+
     if (WKStringIsEqualToUTF8CString(messageName, "SetCanOpenWindows")) {
         m_canOpenWindows = booleanValue(messageBody);
         return nullptr;
